# favie_data_schema

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  amazon_convert.sh  convert.sh  pyproject.toml
.github/workflows/: avro_to_pydantic.yml  python-code-quality.yml
avsc/api/rainforest/: rainforest_product_detail.avsc  rainforest_product_review.avsc
avsc/api/serpdev/: serper_dev_result.avsc
avsc/crawl_data/crawler/: amazon_product_detail.avsc  crawler_result.avsc
avsc/crawl_data/quora/: quora_post.avsc
avsc/crawl_data/rainforest/: rainforest_product_detail.avsc  rainforest_product_review.avsc
avsc/crawl_data/reddit/: reddit_post.avsc
avsc/crawl_data/serpdev/: serper_dev_result.avsc
avsc/log/crawler/: amazon_product_detail.avsc  crawler_result.avsc
avsc/log/quora/: quora_post.avsc
avsc/log/reddit/: reddit_post.avsc
avsc/log/serpdev/: serper_dev_result.avsc
avsc/product/common/: attribute_item.avsc  brand.avsc  category_item.avsc  deal.avsc  delivery.avsc  delivery_price.avsc  favie_product.avsc  fulfillment.avsc  images.avsc  inventory.avsc  offer.avsc  price.avsc  promotion.avsc  return_policy.avsc  search_alias_item.avsc  seller.avsc  shipping.avsc  simple_product.avsc  standard_attributes.avsc  video.avsc
avsc/product/output/: favie_product.avsc
favie_data_schema/: __init__.py
favie_data_schema/api/adapter/: __init__.py
favie_data_schema/api/crawler/: __init__.py
favie_data_schema/favie/: __init__.py
favie_data_schema/favie/adapter/: __init__.py
favie_data_schema/favie/data/: __init__.py
favie_data_schema/favie/resources/: amazon_deal_list_message.json  amazon_list_message.json  amazon_list_result.json  amazon_message.json  amozon_message_source_1.json  bug.json  crawl_product_review.json  encoded_html.txt  gensmo_event.json  gensmo_event_message.json  product_detail.py  (+13 more)
scripts/hooks/: check_user.sh  forbid_keywords.sh  poetry_install.sh
tests/: __init__.py  extract_currency_and_amount_test.py  favie_product_detail_deserialize_test.py  favie_product_utils_test.py  favie_utils_test.py  image_url_rewriter_test.py  log_util_test.py  read_json_util.py  review_summary_cal_percentage_test.py  stark_message_format_test.py  stark_product_detail.json
(+212 files in other folders)
