[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
name = "favie-data-schema"

version = "0.0.54-alpha.4"


description = "Favie Data Schema"
authors = ["allenz-srp <allenz@srp.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="0.0.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"