[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
name = "favie-data-schema"

version = "v0.0.67-alpha.1"
description = "Favie Data Schema"
authors = ["allenz-srp <allenz@srp.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="v0.0.4-alpha.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"